fixed vertical spacing of roster on @mid

--- a/public/bootstrap/less/trp3.less
+++ b/public/bootstrap/less/trp3.less
@@ -1276,10 +1276,6 @@ ul.roster {
       max-height: 40%;
     }
 
-    .trpToolbarList .trpDisplayPicture {
-      margin-bottom: 8px;
-    }
-
   }
 }
 
